expt-old/PodB.yaml
apiVersion: v1
kind: Pod
metadata:
  name: netperf-podb
  namespace: test
  labels:
    keyB: valueB
spec:
  nodeName: worker-15
  containers:
  - image: leannet/k8s-netperf:latest
    name: netperf-host
    ports:
    - containerPort: 12865
    imagePullPolicy: IfNotPresent
