expt-old/netperf-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netperf-service
  namespace: test
spec:
  selector:
    app: netperf-client
    User: user1
    key4: value0
  type: NodePort
  ports:
    - protocol: TCP
      port: 12865
      targetPort: 12865
