expt-old/NP2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np2
  namespace: test
spec:
  podSelector:
    matchLabels:
      keyB: valueB
  policyTypes:
  - Egress
  - Ingress
  egress:
  - to:
    - podSelector:
        matchLabels:
          keyX: valueX
  ingress:
  - from:
    - podSelector:
        matchLabels:
          keyX: valueX
