expt-old/NP4.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np4
  namespace: test
spec:
  podSelector:
    matchLabels:
      keyX: valueX
  policyTypes:
  - Egress
  - Ingress
  egress:
  - to:
    - podSelector:
        matchLabels:
          keyB: valueB
  ingress:
  - from:
    - podSelector:
        matchLabels:
          keyB: valueB
