expt-old/client-network-policy-withports.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cliet-node-policy
  namespace: test
spec:
  podSelector:
    matchLabels:
      User: user1
      key4: value0
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 172.17.0.0/16
        except:
        - 172.17.1.0/24
    - podSelector:
        matchLabels:
          User: user1
          key4: value3
          key1: value3
    ports:
    - protocol: TCP
      port: 12865
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/24
    - podSelector:
        matchLabels:
          User: user1
          key4: value3
          key1: value3
    ports:
    - protocol: TCP
      port: 12865
