expt-old/full_example_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy-db
  namespace: test
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 172.17.0.0/16
        except:
        - 172.17.1.0/24
    - namespaceSelector:
        matchLabels:
          project: myproject
        matchExpressions:
          - {key: environment, operator: In, values: [dev]}
          - {key: tier, operator: Exists}
    - podSelector:
        matchLabels:
          role: frontend
          app: nginx
    - podSelector:
        matchLabels:
          team: dev
          app: web
    ports:
    - protocol: TCP
      port: 6379
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/24
    - podSelector:
        matchLabels:
          role: backend
          app: nginx
    - podSelector:
        matchLabels:
          deployer: client
          status: trusted
    ports:
    - protocol: TCP
      port: 5978
