expt-old/saas-app-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: saas-app-policy
  namespace: test
spec:
  podSelector:
    matchLabels:
      User: user1
      key4: value0
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          User: user1
          key4: value3
          key1: value3
    ports:
    - protocol: TCP
  egress:
  - to:
    - podSelector:
        matchLabels:
          User: user1
          key4: value3
          key1: value3
    ports:
    - protocol: TCP
    - protocol: UDP
      port: 53
